--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "main": "index.ts",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
+    "@shopify/flash-list": "1.7.1",
     "expo": "~52.0.8",
     "expo-status-bar": "~2.0.0",
     "react": "18.3.1",
